# discord-RAT-rust

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  constants.rs  formats.rs  helpers.rs  main.rs  utilities.rs
src/commands/: checks.rs  mod.rs  owner.rs  target.rs
