[package]
name = "discord_RAT_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "3.5.0"
chrono = "0.4"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
tokio = { version = "1.21.2", features = ["full"] }

serenity = { version = "0.11.5", default-features = true, features = ["client", "gateway", "rustls_backend", "model"] }
webhook = "2.1.1"
whoami = "1.2.3"







